# uuid_win

./: CMakeLists.txt  README.md  gen_uuid_win.c  test.c  unparse.c  uuid.h  uuid_win.def
